RESOLVED FIXED128767
Write FEComposite::computeArithmeticPixelsNeon() in terms of loadRGBA8AsFloat()
https://bugs.webkit.org/show_bug.cgi?id=128767
Summary Write FEComposite::computeArithmeticPixelsNeon() in terms of loadRGBA8AsFloat()
Daniel Bates
Reported 2014-02-13 14:29:36 PST
We should use loadRGBA8AsFloat() instead of duplicating similar code in FEComposite::computeArithmeticPixelsNeon(). Also, this will resolve the following uninitialized variable compiler warning: Source/WebCore/platform/graphics/cpu/arm/filters/FECompositeArithmeticNEON.h:52:61: error: variable 'temporary1' is uninitialized when used within its own initialization [-Werror,-Wuninitialized] uint32x2_t temporary1 = vset_lane_u32(*sourcePixel, temporary1, 0);
Attachments
Patch (2.56 KB, patch)
2014-02-13 14:30 PST, Daniel Bates
dino: review+
Daniel Bates
Comment 1 2014-02-13 14:30:19 PST
Daniel Bates
Comment 2 2014-02-13 14:40:40 PST
Daniel Bates
Comment 3 2014-02-13 15:30:44 PST
Included header NEONHelpers.h and committed build fix in <http://trac.webkit.org/changeset/164060>.
Note You need to log in before you can comment on or make changes to this bug.