Write FEComposite::computeArithmeticPixelsNeon() in terms of loadRGBA8AsFloat() https://bugs.webkit.org/show_bug.cgi?id=128767

Reviewed by Dean Jackson.

This patch was inspired by Gabor Rapcsanyi's work in <https://bugs.webkit.org/show_bug.cgi?id=90669>.

Currently we duplicate code in FEComposite::computeArithmeticPixelsNeon() to read pixel data.
Instead we should use the convenience function WebCore::loadRGBA8AsFloat. This also resolves
an uninitialized variable compiler warning in the existing code.

* platform/graphics/cpu/arm/filters/FECompositeArithmeticNEON.h:
(WebCore::FEComposite::computeArithmeticPixelsNeon):

Canonical link: https://commits.webkit.org/146794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164058 268f45cc-cd09-0410-ab3c-d52691b4dbfc